Edited a consistency error

--- a/docs/plans/story_v2.mkd
+++ b/docs/plans/story_v2.mkd
@@ -1124,11 +1124,11 @@ As I lose myself in the story's embrace, a familiar voice cuts through the quiet
 
 Array: "Good morning, Caitlyn."
 
-Startled, I glance up from the pages, my gaze landing on Array, my ever-watchful virtual assistant. The gentle glow of his holographic presence is a reassuring sight amidst the stillness of the morning.
+Startled, I glance up from the pages, my gaze landing on Array, my ever-watchful virtual assistant. The gentle glow of her holographic presence is a reassuring sight amidst the stillness of the morning.
 
 Caitlyn: "Good morning, Array."
 
-I reply, my voice carrying a hint of surprise. It's unusual for her to check up on me outside of his regular reminders and notifications.
+I reply, my voice carrying a hint of surprise. It's unusual for her to check up on me outside of her regular reminders and notifications.
 
 Her form shifts slightly, her expression one of concern.
 
